--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "building-web-applications-with-node.js-and-express",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node app"
@@ -12,5 +12,6 @@
   "dependencies": {
     "chalk": "^5.3.0",
     "express": "^4.18.2"
-  }
+  },
+  "type": "module"
 }
